https-ingress-controller/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - hello-world-ingress.e654a42ba97247c3a6cb.koreacentral.aksapp.io
      secretName: tls-secret
  rules:
    - host: hello-world-ingress.e654a42ba97247c3a6cb.koreacentral.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-aks-helloworld-one
                port:
                  number: 80
          - path: /hello-world-one
            pathType: Prefix
            backend:
              service:
                name: external-aks-helloworld-one
                port:
                  number: 80
          - path: /hello-world-two
            pathType: Prefix
            backend:
              service:
                name: external-aks-helloworld-two
                port:
                  number: 80
