https-ingress-controller/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    # 아래의 옵션을 활성화하면 host.http.paths.[path]의 경로에 / 으로 들어가게 됩니다.
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    # 주의❗️
    # Error Message: Error finalizing order :: CSR doesn't contain a SAN short enough to fit in CN
    # [CN는 최대 64자 까지만 가능합니다.](https://community.letsencrypt.org/t/certbot-errors-with-obtaining-a-new-certificate-an-unexpected-error-occurred-the-csr-is-unacceptable-e-g-due-to-a-short-key-error-finalizing-order-issuing-precertificate-csr-doesnt-contain-a-san-short-enough-to-fit-in-cn/105513)

    # test
    - hosts:
        - test.belf.xyz
      secretName: tls-test
    - hosts:
        - api-gateway.test.belf.xyz
      secretName: tls-api-gateway.test
    - hosts:
        - oauth.test.belf.xyz
      secretName: tls-oauth.test
    - hosts:
        - node-test.test.belf.xyz
      secretName: tls-node-test.test
    - hosts:
        - hello-world.test.belf.xyz
      secretName: tls-hello-world.test
    # dev
    - hosts:
        - dev.belf.xyz
      secretName: tls-dev
    # qa
    - hosts:
        - qa.belf.xyz
      secretName: tls-qa
    - hosts:
        - api-gateway.qa.belf.xyz
      secretName: tls-api-gateway.qa
    - hosts:
        - oauth.qa.belf.xyz
      secretName: tls-oauth.qa
    # prod
    - hosts:
        - belf.belf.xyz
      secretName: tls-belf
    - hosts:
        - api-gateway.belf.xyz
      secretName: tls-api-gateway
    - hosts:
        - oauth.belf.xyz
      secretName: tls-oauth
  rules:
    # test
    - host: test.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-test-front-server
                port:
                  number: 3000
    - host: api-gateway.test.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-test-api-gateway
                port:
                  number: 3000
    - host: oauth.test.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-test-oauth-server
                port:
                  number: 3000
    - host: node-test.test.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-test-node-test
                port:
                  number: 8080
    - host: hello-world.test.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-test-aks-helloworld-one
                port:
                  number: 80
          - path: /hello-world-one
            pathType: Prefix
            backend:
              service:
                name: external-test-aks-helloworld-one
                port:
                  number: 80
          - path: /hello-world-two
            pathType: Prefix
            backend:
              service:
                name: external-test-aks-helloworld-two
                port:
                  number: 80
    # dev
    - host: dev.belf.xyz
    # qa
    - host: qa.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-qa-front-server
                port:
                  number: 3000
    - host: api-gateway.qa.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-qa-api-gateway
                port:
                  number: 3000
    - host: oauth.qa.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-qa-oauth-server
                port:
                  number: 3000
    # prod
    - host: belf.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-prod-front-server
                port:
                  number: 3000
    - host: api-gateway.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-prod-api-gateway
                port:
                  number: 3000
    - host: oauth.belf.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-prod-oauth-server
                port:
                  number: 3000
